demo1/ingress.yaml
---
# 对于hello Service 我们声明一个 traefik 规则
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hello-dev
  name: hello-ingress-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: hello.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello
              servicePort: 8080

          - path: /api
            backend:
              serviceName: hello
              servicePort: 8080
